style.css
* {
  margin: 0;
  padding: 0;
  font-family: "Roboto";
}
body {
  background-color: #f5f1ed;
  top: 0;
  width: 100%;
  overflow-x: hidden;
}

/* NAVBAR */
#navbar ul {
  z-index: 1;
  width: 100%;
  height: 70px;
  list-style-type: none;
  margin: 0;
  overflow: hidden;
  background-color: #d88c9a;
  position: fixed;
}

#navbar li {
  float: right;
  padding: 0 20px;
  position: relative;
  top: 30%;
}

#navbar #first {
  float: left;
}

#navbar li a {
  color: #f5f1ed;
  font-size: 24px;
  text-align: center;
  text-decoration: none;
  font-family: "Vollkorn";
}

#navbar ul li::after {
  content: "";
  width: 0%;
  height: 1.5px;
  background: #f5f1ed;
  display: block;
  margin: auto;
  transition: 0.5s;
}
#navbar ul li:hover::after {
  width: 80%;
}

/* IMAGES AND PARAGRAPHS */
.container {
  width: 900px;
  margin: auto;
  display: flex;
  padding: 70px, 100px, 100px, 0px;
  justify-content: space-between;
}

#top-container {
  padding-top: 28vh;
  padding-bottom: 24vh;
}

#profile {
  margin-right: 2.77777777778vw;
}
.title {
  font-family: "Italiana";
  font-size: 48px;
}
.body-text {
  font-family: "Lato";
  font-size: 16px;
  line-height: 1.4;
}
.circle-image {
  border-radius: 50%;
  width: 400px;
  height: 400px;
  object-fit: contain;
}

/* MAIN LINKS */
.main-links {
  flex: 1;
  text-align: center;
  justify-content: left;
  padding: 0;
  position: absolute;
}
.main-links ul li {
  margin-top: 4vmin;
  margin-bottom: 4vmin;
  list-style: none;
  display: inline-block;
  position: relative;
}
.button {
  display: inline-block;
  text-decoration: none;
  color: #7da075;
  border: 1px solid #7da075;
  padding: 12px 34px;
  font-size: 13px;
  background: transparent;
  cursor: pointer;
  margin: 0px 0.9px 0px 0.9px;
}
.button:hover {
  border: 1px solid #7da075;
  background: #7da075;
  color: #f5f1ed;
  transition: 1s;
}

.container2 {
  width: 900px;
  margin: auto;
  margin-bottom: 100px;
  padding: 0px, 100px, 100px, 0px;
}
.container3 {
  width: 83.3333333333vw;
  margin: auto;
  padding: 100px;
  padding-left: 0;
  padding-right: 0;
}

.grid-container {
  margin-top: 2vh;
  display: grid;
  grid-template-columns: 25% 25% 25% 25%;
  grid-template-rows: 11.1111111111vh 11.1111111111vh 11.1111111111vh;
  border-width: 5px;
  gap: 5px;
}

.grid-item {
  background-color: #7da075;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "Roboto";
  font-weight: 500;
  font-size: 3.5vmin;
  color: #f5f1ed;
}

#other-skills .grid-item {
  background-color: #d88c9a;
}

.copyright {
  text-align: center;
  margin-bottom: 50px;
  font-family: "Italiana";
}

/* CONTACT */
#contact-container {
  padding-top: 100px;
  max-width: 700px;
  padding-left: 0;
  padding-right: 0;
}
.contactBox {
  max-width: 100%;
  height: 450px;
  border-radius: 5px;
  background-color: #7da075;
  margin: auto;
  display: flex;
  padding: 20px;
  justify-content: space-between;
  font-family: "Roboto";
  margin-top: 10px;
}
#form {
  width: 100%;
}
#name-label {
  display: block;
  color: #f5f1ed;
  font-size: 20px;
}
#name {
  margin-top: 5px;
  display: block;
  background-color: #f5f1ed;
  border: none;
  width: 98%;
  height: 30px;
  padding-left: 5px;
  padding-right: 5px;
}
#name:focus {
  outline: none;
}
#email-label {
  margin-top: 20px;
  display: block;
  color: #f5f1ed;
  font-size: 20px;
}
#email {
  margin-top: 5px;
  display: block;
  background-color: #f5f1ed;
  border: none;
  width: 98%;
  height: 30px;
  padding-left: 5px;
  padding-right: 5px;
}
#email:focus {
  outline: none;
}
#message-label {
  margin-top: 20px;
  display: block;
  color: #f5f1ed;
  font-size: 20px;
}
#message {
  margin-top: 5px;
  display: block;
  background-color: #f5f1ed;
  border: none;
  width: 98%;
  height: 200px;
  font-family: "Roboto";
  padding: 5px;
}
#message:focus {
  outline: none;
}
#contact-btn {
  margin-top: 20px;
  color: #f5f1ed;
  background: transparent;
  border: 1px solid #f5f1ed;
}
#contact-btn:hover {
  border: 1px solid #f5f1ed;
  background: #f5f1ed;
  color: #7da075;
  transition: 1s;
}
#confirmation {
  /* visibility: hidden; */
  border-radius: 5px;
  background-color: #d88c9a;
  color: #f5f1ed;
  margin: auto;
  display: flex;
  padding: 20px;
  justify-content: space-between;
  display: block;
  font-family: "Roboto";
  font-size: 20px;
  margin-top: 10px;
}

/* DESIGNS */
.designs-gallery {
  margin-top: 20px;
  display: grid;
  grid-gap: 1.3957%;
  grid-template-columns: 53.2599% 0.67739% 46.06266%;
  grid-template-rows: 23.4027777778vw 24.375vw 7.56944444444vw 11.8055555556vw 4.51388888889vw 20.4166666667vw 34.0972222222vw;
  margin-bottom: 10vw;
}
.gallery__img {
  width: 100%;
  object-fit: scale-down;
}
.gallery__item {
  max-height: 100%;
  padding: 1.04166666667vw;
  background-color: white;
}

.gallery__item--1 {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 2;
}
.gallery__item--2 {
  grid-column-start: 2;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 3;
}
.gallery__item--3 {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 2;
  grid-row-end: 4;
}
.gallery__item--4 {
  grid-column-start: 2;
  grid-column-end: 4;
  grid-row-start: 3;
  grid-row-end: 5;
}
.gallery__item--5 {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 4;
  grid-row-end: 6;
}
.gallery__item--6 {
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 6;
  grid-row-end: 7;
}
.gallery__item--7 {
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 5;
  grid-row-end: 7;
}
.gallery__item--8 {
  grid-column-start: 1;
  grid-column-end: 4;
  grid-row-start: 7;
  grid-row-end: 8;
}

@media (max-width: 1000px) {
  .container {
    width: 90%;
  }
  .container2 {
    width: 90%;
  }
  .title {
    font-size: 30px;
  }
  .body-text {
    font-size: 14px;
  }
  #navbar ul {
    height: 7.77777777778vh;
  }
  #navbar li a {
    font-size: 2.2vmax;
  }
  #top-container {
    padding-top: 14vh;
  }
  .button {
    padding: 12px 2vw;
  }
}
@media (max-width: 850px) {
  #top-container {
    padding-bottom: 100px;
  }
}
@media (max-width: 700px) {
  .circle-image {
    width: 50vw;
    height: 50vw;
  }
  #top-container {
    display: grid;
    place-items: center;
  }
  .button {
    padding: 12px 8vw;
  }
  .copyright {
    margin-bottom: 30px;
  }
}

@media (max-width: 350px) {
  .button {
    width: 50vw;
    text-align: center;
  }
  .main-links ul li {
    margin: 2vw;
  }
  #top-container {
    margin-bottom: 10vw;
  }
  .body-text {
    margin-bottom: 10px;
  }
  #navbar li a {
    font-size: 1.7vmax;
  }
  #navbar li {
    padding: 0 10px;
  }
}

